
ENGINE
	Fixed: autoinstaller::Functions::doImscpBackup: Name "main::execmode" used only once...

GUI
	Fixed: Malformed href attribute in ticket_system.tpl (admin/reseller levels)
	Fixed: Unable to add custom CNAME DNS resource record using the arobase symbol which is substitued by the zone root
	Updated: Layout according changes from vendor libraries

INSTALLER
	Fixed: Download zip archives instead of cloning sources which include useless VCS information (composer packages)
	Fixed: Wrong template name passed to the onLoadTemplate event (MySQL server implementation)

PLUGINS
	Fixed: Plugin backend files must no longer be removed on error
	Updated: Plugin API to version 0.2.11

VENDOR
	Updated: jQuery library to version 1.1.11
	Updated: jQuery UI library to version 1.1.11
	Updated: jQuery DataTables plugin to version 1.10.2

------------------------------------------------------------------------------------------------------------------------
1.1.13
------------------------------------------------------------------------------------------------------------------------

2014-07-20: Laurent Declercq
	RELEASE i-MSCP 1.1.13

DOCS
	Updated: INSTALL files

SERVICES
	Fixed: Apache mod_version module is not always static
	Fixed: The parameter innodb_use_native_aio is not available in MySQL < 5.5

------------------------------------------------------------------------------------------------------------------------
1.1.12
------------------------------------------------------------------------------------------------------------------------

2014-07-16: Laurent Declercq
	RELEASE i-MSCP 1.1.12

ADDONS
	Fixed: Quotation marks must be escaped in PhpMyAdmin configuration file
	Fixed: Quotation marks must be escaped in Roundcube configuration file
	Updated: Required Roundcube addon package version is now 0.5.0.*@dev

CONFIGS
	Removed: GUI_CERT_DIR variable (replaced by CONF_DIR variable)
	Cleanup: Package files, config files